--- a/about.html
+++ b/about.html
@@ -46,6 +46,20 @@
                   data-animsition-out-class="overlay-slide-out-right">
                 <div class="title">会社概要</div>
               </a></li>
+              <li>
+                <a
+                  href="#"
+                  class="animsition-link"
+                  data-animsition-out-class="overlay-slide-out-right">
+                <div class="title">プライバシーポリシー</div>
+              </a></li>
+              <li>
+                <a
+                  href="#"
+                  class="animsition-link"
+                  data-animsition-out-class="overlay-slide-out-right">
+                <div class="title">お問い合わせ</div>
+              </a></li>
             </ul>
           </nav>
           <div id="nav-bg"></div>
