--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <body>
 
   <div id="barba-wrapper">
-    <div class="barba-container">
+    <div class="barba-container container">
           <div id="box" class="box"></div>
           <div id="box2" class="box"></div>
           <div id="nav-toggle">
@@ -68,36 +68,41 @@
 
 
       <div class="top">
-        <h1>事業の目的</h1>
+        <div class="rows">
+          <div class="col-md-2"></div>
+          <div class="col-xs-12 col-md-8">
+            <h1>事業の目的</h1>
 
-        <div class="block">
-          <div class="text">データマーケティングの活用は大企業だけでなく、</div>
-          <div class="text">中小企業やスタートアップ企業でもその活用が進んでいます。</div>
-          <div class="text">当初はIT企業など先進的なB2Bビジネスでの導入が中心でしたが、</div>
-          <div class="text">エンゲージメント志向のアプローチで顧客との関係を維持、強化するために、</div>
-          <div class="text">医療や金融、メディア、小売業などB2C企業での導入</div>
-          <div class="text">も拡大しつつあります。</div>
-        </div>
-        <div class="block">
-          <div class="text">高い成果を得るためには、適切な人材、コンテンツ、</div>
-          <div class="text">データなどを活かす包括的な戦略が必要です。</div>
-        </div>
-        <div class="block">
-          <div class="text">まず、質の良いデータをどうやって集めるか。自分たちのマーケットにあったデータなのか。</div>
-          <div class="text">今ある既存データは本当に自分たちのターゲットのデータなのか。</div>
-          <div class="text">もう一度データ自体見直しては如何ですか。</div>
-          <div class="text">そのお手伝いををさせて頂くのが私たち（株）ReRの使命です。</div>
-        </div>
-        <div class="block">
-          <div class="text">事業概要</div>
-          <ul>
-            <li>データクローリング</li>
-            <li>データクレンジング</li>
-            <li>データマイ二ング</li>
-            <li>データロボ</li>
-            <li>データウェアハウス</li>
-          </ul>
-        </div>
+            <div class="block">
+              <div class="text">データマーケティングの活用は大企業だけでなく、</div>
+              <div class="text">中小企業やスタートアップ企業でもその活用が進んでいます。</div>
+              <div class="text">当初はIT企業など先進的なB2Bビジネスでの導入が中心でしたが、</div>
+              <div class="text">エンゲージメント志向のアプローチで顧客との関係を維持、強化するために、</div>
+              <div class="text">医療や金融、メディア、小売業などB2C企業での導入</div>
+              <div class="text">も拡大しつつあります。</div>
+            </div>
+            <div class="block">
+              <div class="text">高い成果を得るためには、適切な人材、コンテンツ、</div>
+              <div class="text">データなどを活かす包括的な戦略が必要です。</div>
+            </div>
+            <div class="block">
+              <div class="text">まず、質の良いデータをどうやって集めるか。自分たちのマーケットにあったデータなのか。</div>
+              <div class="text">今ある既存データは本当に自分たちのターゲットのデータなのか。</div>
+              <div class="text">もう一度データ自体見直しては如何ですか。</div>
+              <div class="text">そのお手伝いををさせて頂くのが私たち（株）ReRの使命です。</div>
+            </div>
+            <div class="block">
+              <div class="text">事業概要</div>
+              <ul>
+                <li>データクローリング</li>
+                <li>データクレンジング</li>
+                <li>データマイ二ング</li>
+                <li>データロボ</li>
+                <li>データウェアハウス</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-2"></div>
 
       </div>
     </div>
