--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <div id="barba-wrapper">
-    <div class="barba-container" data-namespace="main">
+    <div class="barba-container container" data-namespace="main">
           <div id="box" class="box"></div>
           <div id="box2" class="box"></div>
           <div id="nav-toggle">
@@ -67,7 +67,7 @@
           <div id="nav-bg-fix"></div>
 
 
-      <div class="top">
+      <div class="catch">
         <h1>Digital design with a playful twist</h1>
         <h2>Dive into digital</h2>
       </div>
