--- a/greeting.html
+++ b/greeting.html
@@ -20,7 +20,7 @@
 <body>
 
   <div id="barba-wrapper">
-    <div class="barba-container" data-namespace="main">
+    <div class="barba-container">
       <div class="container">
           <div id="box" class="box"></div>
           <div id="box2" class="box"></div>
@@ -75,15 +75,30 @@
           <div id="nav-bg-fix"></div>
 
       <div class="main">
-        <div class="catch">
-          <h1>Digital design with a playful twist</h1>
-          <h2>Dive into digital</h2>
+        <div class="top">
+          <div class="rows">
+            <div class="col-md-2"></div>
+            <div class="col-xs-12 col-md-10 padding-left">
+              <h1>未来に挑戦し<br>想像を超えるために</h1>
+              <div class="block">
+                <div class="text">Bimg株式会社は2018年3月に株式会社ReRへと生まれ変わりました。</div>
+                <div class="text">データマーケティングを軸としたビジネスと共に、今後BimgはReR内の事業部として、アパレル販売及びに118カ国のネットワークを利用したワールドワイドマーケティング、講演会などに力を入れて参ります。</div>
+                <div class="text">現代社会はシェアの時代であると、実感しており、私達が持っているものを皆様とシェアし、喜びもシェアできるビジネスを展開をしていきたいと考えております</div>
+                <div class="text">デジタルとアナログを組み合わせ、「想像を超える」を胸に、いかに人々に、社会に貢献できるのかを常に考え、未来に挑戦し続けていきたいと思います。</div>
+              </div>
+              <div class="block">
+                <div class="text">株式会社ReR</div>
+                <div class="text">代表取締役社長 吉川プリアンカ</div>
+              </div>
+
+            <div class="col-md-2"></div>
+          </div>
         </div>
       </div>
+
+
     </div>
   </div>
-  </div>
-
   </div>
 
 </body>
