add image & access

--- a/about.html
+++ b/about.html
@@ -59,6 +59,20 @@
                   href="#"
                   class="animsition-link"
                   data-animsition-out-class="overlay-slide-out-right">
+                <div class="title">Bimg事業部</div>
+              </a></li>
+              <li>
+                <a
+                  href="access.html"
+                  class="animsition-link"
+                  data-animsition-out-class="overlay-slide-out-right">
+                <div class="title">アクセス</div>
+              </a></li>
+              <li>
+                <a
+                  href="#"
+                  class="animsition-link"
+                  data-animsition-out-class="overlay-slide-out-right">
                 <div class="title">プライバシーポリシー</div>
               </a></li>
               <li>
