--- a/greeting.html
+++ b/greeting.html
@@ -59,6 +59,20 @@
                   href="#"
                   class="animsition-link"
                   data-animsition-out-class="overlay-slide-out-right">
+                <div class="title">Bimg事業部</div>
+              </a></li>
+              <li>
+                <a
+                  href="access.html"
+                  class="animsition-link"
+                  data-animsition-out-class="overlay-slide-out-right">
+                <div class="title">アクセス</div>
+              </a></li>
+              <li>
+                <a
+                  href="#"
+                  class="animsition-link"
+                  data-animsition-out-class="overlay-slide-out-right">
                 <div class="title">プライバシーポリシー</div>
               </a></li>
               <li>
@@ -85,6 +99,9 @@
                 <div class="text">データマーケティングを軸としたビジネスと共に、今後BimgはReR内の事業部として、アパレル販売及びに118カ国のネットワークを利用したワールドワイドマーケティング、講演会などに力を入れて参ります。</div>
                 <div class="text">現代社会はシェアの時代であると、実感しており、私達が持っているものを皆様とシェアし、喜びもシェアできるビジネスを展開をしていきたいと考えております</div>
                 <div class="text">デジタルとアナログを組み合わせ、「想像を超える」を胸に、いかに人々に、社会に貢献できるのかを常に考え、未来に挑戦し続けていきたいと思います。</div>
+              </div>
+              <div class="block">
+                <img src="images/main.jpg" />
               </div>
               <div class="block">
                 <div class="text">株式会社ReR</div>
