--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.1/TweenMax.min.js"></script>
 
   <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="ams.css" />
-  <script src="js/jquery.ripples-min.js"></script>
+  <!-- <script src="js/jquery.ripples-min.js"></script> -->
 
   <script src="main.js"></script>
 
@@ -23,7 +22,6 @@
   <script src="js/NeuQuant.js"></script>
   <script src="js/GIFEncoder.js"></script>
   <script src="js/canvas.js"></script> -->
-  <script src="js/ams.js"></script>
 </head>
 <body>
 
@@ -99,12 +97,7 @@
       <div class="main">
         <div class="catch">
           <!-- <canvas id="canvas" width="768" height="768"></canvas> -->
-          <!-- <img id="top-img" class="" src="images/top.gif" /> -->
-          <figure class="b-oil js-gl-canvas js-animation-oil" data-width="768" data-height="768">
-              <!-- <img class="b-video__fallback js-fallback-oil appear" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="https://booreiland.amsterdam/app/themes/booreiland/dist/images/booreiland_oil_fallback_356610e8.gif 1x, https://booreiland.amsterdam/app/themes/booreiland/dist/images/booreiland_oil_fallback@2x_8b043ca8.gif 2x" alt="" data-aspectratio="1"> -->
-              <img class="b-video__fallback js-fallback-oil appear" src="" data-srcset="https://booreiland.amsterdam/app/themes/booreiland/dist/images/booreiland_oil_fallback_356610e8.gif 1x, https://booreiland.amsterdam/app/themes/booreiland/dist/images/booreiland_oil_fallback@2x_8b043ca8.gif 2x" alt="" data-aspectratio="1">
-          </figure>
-
+          <img id="top-img" class="" src="images/top.gif" />
         </div>
         <div class="catch">
           <h1>Digital design with a playful twist</h1>
