--- a/about.html
+++ b/about.html
@@ -90,9 +90,9 @@
 
       <div class="main">
         <div class="top">
-          <div class="rows">
-            <div class="col-md-2"></div>
-            <div class="col-xs-12 col-md-10 padding-left">
+          <div class="row margin-zero">
+            <!-- <div class="col-md-2"></div> -->
+            <div class="col-xs-12 col-md-10">
               <h1>事業の目的</h1>
               <div class="block">
                 <div class="text">データマーケティングの活用は大企業だけでなく、中小企業やスタートアップ企業でもその活用が進んでいます。</div>
