--- a/greeting.html
+++ b/greeting.html
@@ -90,9 +90,9 @@
 
       <div class="main">
         <div class="top">
-          <div class="rows">
-            <div class="col-md-2"></div>
-            <div class="col-xs-12 col-md-10 padding-left">
+          <div class="row margin-zero">
+            <!-- <div class="col-md-2"></div> -->
+            <div class="col-xs-12 col-md-10">
               <h1>未来に挑戦し<br>想像を超えるために</h1>
               <div class="block">
                 <div class="text">Bimg株式会社は2018年3月に株式会社ReRへと生まれ変わりました。</div>
@@ -100,12 +100,14 @@
                 <div class="text">現代社会はシェアの時代であると、実感しており、私達が持っているものを皆様とシェアし、喜びもシェアできるビジネスを展開をしていきたいと考えております</div>
                 <div class="text">デジタルとアナログを組み合わせ、「想像を超える」を胸に、いかに人々に、社会に貢献できるのかを常に考え、未来に挑戦し続けていきたいと思います。</div>
               </div>
-              <div class="block">
-                <img src="images/main.jpg" />
-              </div>
-              <div class="block">
-                <div class="text">株式会社ReR</div>
-                <div class="text">代表取締役社長 吉川プリアンカ</div>
+              <div class="block row margin-bottom">
+                <div class="col-xs-12 col-md-6">
+                  <div class="text">株式会社ReR</div>
+                  <div class="text">代表取締役社長 吉川プリアンカ</div>
+                </div>
+                <div class="col-xs-12 col-md-6">
+                  <img src="images/main.jpg" />
+                </div>
               </div>
 
             <div class="col-md-2"></div>
