--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <img id="top-img" class="" src="images/top.gif" />
         </div>
         <div class="catch">
-          <h1>Digital design with a playful twist</h1>
+          <h1>ReR Co., Ltd</h1>
           <h2>Dive into digital</h2>
         </div>
       </div>
