--- a/access.html
+++ b/access.html
@@ -92,11 +92,12 @@
         <div class="top">
           <h1>アクセス</h1>
           <div class="block">
-            <div class="text">東京都白金台3-2-44</div>
-            <div class="text">カサブランコ #301</div>
+            <div class="text">〒108-0071</div>
+            <div class="text">東京都港区白金台3−2−44</div>
+            <div class="text">Casa Blanco 301号室</div>
           </div>
           <div class="block">
-            <div class="text">t: 03-6804-7436</div>
+            <div class="text">TEL 03-6804-7436</div>
           </div>
           <div class="block">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.6325620700227!2d139.72392181512367!3d35.636783780204716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b03e8516c95%3A0x51b874a91c116b1f!2z44CSMTA4LTAwNzEg5p2x5Lqs6YO95riv5Yy655m96YeR5Y-w77yT5LiB55uu77yS4oiS77yU77yU!5e0!3m2!1sja!2sjp!4v1535423649567" width="600" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
